--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-frontend",
+  "name": "admin-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "date-fns": "^4.1.0",
+    "@tinymce/tinymce-react": "^6.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
