--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
